minggu-16/manifests/02-headless-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: production
spec:
  # ClusterIP: None = HEADLESS SERVICE
  # Tidak membuat virtual IP. langsung resolve ke IP Pod.
  clusterIP: None
  selector:
    app: backend
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
  namespace: production
spec:
  serviceName: backend-api
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nginx:alpine
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: dns-test
  namespace: production
spec:
  # DNS Config kustom: Pod ini akan meneruskan semua DNS Query ke 'my-corp.com'
  # ke Corporate DNS Server 1.2.3.4 (misal Active Directory internal).
  dnsConfig:
    nameservers:
      - 1.2.3.4
    searches:
      - my-corp.com
    options:
      - name: ndots
        value: "2"
  containers:
  - name: busybox
    image: busybox:1.36
    command: ["sleep", "3600"]
