minggu-16/manifests/01-cilium-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-egress
  annotations:
    policy.cilium.io/description: "Mengizinkan SEMUA Pod di Cluster untuk melakukan DNS Lookup keluar ke CoreDNS."
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: production
spec:
  endpointSelector:
    matchLabels:
      app: backend
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-other-ingress
  namespace: production
spec:
  endpointSelector:
    matchLabels:
      app: backend
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        app: "untrusted-client"
